Proyectos y practicas/3º/PL/PL-Practica-Final-AJS/PL_P2_AGUILAR_RODRIGUEZ/tests/propios/invalidos_sintaxis/test5.symbol
SCOPE: global
Function(name='a', type='boolean', parameters=	a:boolean,
	b:boolean,
)

SCOPE: a
Symbol(name='a', type=None, value='Unkown')
Symbol(name='b', type=None, value='Unkown')

